k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opengittr-website
  labels:
    app: opengittr-website
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: opengittr-website
